force-app/main/default/objects/Account/fields/Days_Since_Last_Followup__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Followup__c</fullName>
    <formula>Today() - LastFollowupDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Followup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>