force-app/main/default/objects/Account/fields/Einstein_Renewal_Risk__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Renewal_Risk__c</fullName>
    <label>Einstein Renewal Risk</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>