force-app/main/default/objects/Account/fields/FollowupFlowName__c.field-meta.xml
<CustomField>
    <fullName>FollowupFlowName__c</fullName>
    <label>FollowupFlowName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>