force-app/main/default/objects/Account/fields/LastFollowupDate__c.field-meta.xml
<CustomField>
    <fullName>LastFollowupDate__c</fullName>
    <label>Last Followup Date</label>
    <type>Date</type>
</CustomField>